<resources>
    <string name="app_name">LJ Stay Safe</string>
    <string name="google_play_services_key">AIzaSyD4sWtpLEMPwDZj7-UDvENUsJpeHVLcKO0</string>
    <string name="home">Home</string>
    <string name="friends">Friends</string>
    <string name="me">Me</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="full_name">Full name</string>
    <string name="register">REGISTER</string>
    <string name="lj_points">LJ-Points</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_driving_history">My Driving History</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="message">Message</string>
    <string name="whitelist_contacts">Whitelist Contacts</string>
    <string name="save">SAVE</string>
    <string name="silent_all_notifications_except_phone_calls">Silent all notifications, except phone calls</string>
    <string name="input_your_sms_message_here">Input your SMS message here</string>
    <string name="auto_reply_sms_while_driving">Auto reply SMS while driving</string>
    <string name="room_db_name">stay_safe_db</string>
    <string name="driving_status">driving status</string>
    <string name="passenger_status">passenger status</string>
    <string name="enjoy_your_ride">Enjoy your ride!</string>

    <string name="user_collection">users</string>
    <string name="feed_collection">feeds</string>
    <string name="friend_collection">friends</string>
    <string name="ringer_mode">ringerMode</string>
</resources>
